// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<div
  class="css-wc19cd"
>
  <button
    class="css-1p8pauz"
    color="#9DB06A"
    type="text"
  >
    ?
  </button>
</div>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<div
  class="css-wc19cd"
>
  <button
    class="css-1q01h29"
    color="#E86C76"
    type="text"
  >
    ?
  </button>
</div>
`;
